--- a/css/imports/variables.css
+++ b/css/imports/variables.css
@@ -2,11 +2,13 @@
     --background: #FFF8FB;
     --cta-colour: #9E2C4B;
     --header: #BF545A;
-    --text-coulour: #360101;
+    --text-colour: #360101;
     --extra-colour: #F4D791;
+    --footer-colour: rgba(191, 84, 90, 0.8);
 
     --heading-font: 'Quicksand';
     --body-text: 'Inconsolata';
     --cta-font: 'Josefin Sans';
+    --bite-font: 'Joti One';
 
 }
