--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,109 @@
 @import "imports/variables.css";
+
+body {
+    background-color: var(--background);
+    margin: 0;
+    padding: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex-grow: 1;
+}
+
+header {
+    background-color: var(--header);
+    padding: 5px;
+}
+
+h1 {
+    font-family: var(--bite-font), Verdana, Geneva, Tahoma, sans-serif;
+    color: var(--text-colour);
+    font-size: 2.5rem;
+    margin: 65px 0 0 0;
+}
+
+h2, a {
+    font-family: var(--cta-font), Verdana, Geneva, Tahoma, sans-serif;
+    color: var(--text-colour);
+    text-decoration: none;
+}
+
+nav ul {
+    display: flex;
+    flex-direction: row;
+    gap: 2%;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+nav li {
+    display: block;
+}
+
+.logo {
+    display: flex;
+    flex-direction: column;
+    margin: 20px 35%;
+}
+
+.logo_mobile {
+    display: flex;
+}
+
+.logo_img {
+    grid-column-start: 2;
+    width: 120px;
+    padding: 0;
+}
+
+footer {
+    background-color: var(--footer-colour);
+}
+
+h2 {
+    font-size: 1rem;
+    margin: 5px;
+}
+
+h3 {
+    font-family: var(--heading-font), Verdana, Geneva, Tahoma, sans-serif;
+    color: var(--text-colour);
+}
+
+p {
+    font-family: var(--body-text), Georgia, 'Times New Roman', Times, serif;
+    color: var(--text-colour);
+}
+
+.recipe__options {
+    display: flex;
+    width: 60%;
+    margin: 0 auto;
+    justify-content: space-between;
+}
+
+.cakes {
+    background-color: var(--extra-colour);
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    filter: drop-shadow(10px 10px 10px var(--text-colour));
+}
+
+.cakes img {
+    width: 50px;
+    margin: 5px auto;
+    padding: 0;
+    display: flex;
+}
+
+.cakes h3 {
+   margin: 0;
+}
