--- a/css/styles.css
+++ b/css/styles.css
@@ -90,7 +90,6 @@ nav li a:hover,
 }
 
 .loading {
-    display: flex;
     height: 100px;
     width: 100px;
     border: 20px dashed var(--cta-colour);
@@ -112,6 +111,7 @@ footer {
     align-items: center;
     justify-content: space-between;
     padding: 5px;
+    margin-top: 150px;
 }
 
 .logo-footer {
@@ -154,8 +154,10 @@ button:hover {
     box-shadow: 0 0 20px var(--cta-colour);
 }
 
+/* Contact page */
 p,
-.form_error {
+.form_error,
+ul {
     font-family: var(--body-text), Georgia, 'Times New Roman', Times, serif;
     color: var(--text-colour);
 }
@@ -169,6 +171,49 @@ label {
     margin: 5px 0 0 0;
 }
 
+.contact {
+    display: flex;
+    justify-content: center;
+    margin: 50px 0 0 0;
+}
+
+form {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    margin: 50px auto;
+    gap: 2em;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+input,
+#message {
+    width: 400px;
+    border-radius: 2px;
+    border: 1px solid var(--text-colour);
+}
+
+input {
+    height: 40px;
+}
+
+#message {
+    height: 130px;
+}
+
+.input {
+    display: flex;
+    flex-direction: column;
+    margin: 10px;
+}
+
+/* Home page */
 .carousel {
     display: grid;
     grid-auto-flow: column;
@@ -312,47 +357,7 @@ label {
     font-size: 50px;
 }
 
-.contact {
-    display: flex;
-    justify-content: center;
-    margin: 50px 0 0 0;
-}
-
-form {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    margin: 50px auto;
-    gap: 2em;
-}
-
-.column {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-input,
-#message {
-    width: 400px;
-    border-radius: 2px;
-    border: 1px solid var(--text-colour);
-}
-
-input {
-    height: 40px;
-}
-
-#message {
-    height: 130px;
-}
-
-.input {
-    display: flex;
-    flex-direction: column;
-    margin: 10px;
-}
+/* About page  */
 
 .images {
     display: flex;
@@ -376,4 +381,85 @@ input {
     align-items: center;
     margin: 0 auto;
     width: min(1200px, 80%);
+}
+
+/* Recipes page  */
+.recipes_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 3em;
+    min-height: 150vh;
+}
+
+.recipes_list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 5%;
+    justify-content: space-evenly;
+    margin: 100px auto;
+    width: 80%;
+    height: 90%;
+}
+
+.recipePost {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid var(--cta-colour);
+    box-shadow: 5px 5px 5px var(--text-colour);
+    border-radius: 2px;
+    width: 100%;
+    transition: 0.4s ease-in-out;
+}
+
+.recipePost:hover {
+    box-shadow: 10px 10px 10px var(--text-colour);
+    width: 101%;
+}
+
+.recipePost img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    margin: 0;
+}
+
+.recipePost h3 {
+    margin: 10px;
+}
+
+/* Recipe specific page  */
+.above_post {
+    display: flex;
+    width: 90%;
+    justify-content: space-between;
+}
+
+.go-back {
+    text-decoration: underline;
+    font-size: 1.5em;
+}
+
+.recipe_container {
+    display: flex;
+    flex-direction: column;
+    gap: 3em;
+    width: 90%;
+    justify-content: center;
+    margin: 50px auto;
+}
+
+.recipe {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    margin: 0 auto;
+}
+
+.modal {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto 30px auto;
 }
