--- a/css/imports/variables.css
+++ b/css/imports/variables.css
@@ -5,6 +5,7 @@
     --text-colour: #360101;
     --extra-colour: #F4D791;
     --footer-colour: rgba(197, 100, 106, 0.9);
+    --modal-colour: rgba(54, 1, 1, 0.8);
 
     --heading-font: 'Quicksand';
     --body-text: 'Inconsolata';
