--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,6 @@ footer {
     align-items: center;
     justify-content: space-between;
     padding: 5px;
-    margin-top: 150px;
 }
 
 .logo-footer {
@@ -289,6 +288,9 @@ input {
 
 .post button {
     grid-row-start: 3;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
 }
 
 .recipe__options {
@@ -385,12 +387,10 @@ input {
 
 /* Recipes page  */
 .recipes_container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    display: grid;
+    grid-template-rows: 1.5fr 0.5fr;
+    justify-content: space-between;
     align-items: center;
-    gap: 3em;
-    min-height: 150vh;
 }
 
 .recipes_list {
@@ -400,7 +400,6 @@ input {
     justify-content: space-evenly;
     margin: 100px auto;
     width: 80%;
-    height: 90%;
 }
 
 .recipePost {
@@ -457,9 +456,35 @@ input {
     margin: 0 auto;
 }
 
-.modal {
+#modal_img {
     width: 50%;
     display: flex;
     justify-content: center;
     margin: 0 auto 30px auto;
 }
+
+#modal_img:hover {
+    cursor: pointer;
+}
+
+dialog {
+    z-index: 1;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--modal-colour);
+    padding-top: 200px;
+    border: none;
+    margin: 0;
+}
+
+dialog #modal_img {
+    width: 80%;
+    position: fixed;
+    left: 10%;
+
+}
+
+/* #modal {
+    background-color: var(--modal-colour);
+    height: 100%;
+} */
