--- a/css/imports/basics.css
+++ b/css/imports/basics.css
@@ -3,7 +3,7 @@
 h1,
 h4 {
     font-family: var(--bite-font), Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 2.5em;
+    font-size: clamp(1.4em, 50px, 2.5em);
     margin: 65px 0 0 0;
 }
 
@@ -12,7 +12,7 @@ a,
 .error_message {
     font-family: var(--cta-font), Verdana, Geneva, Tahoma, sans-serif;
     text-decoration: none;
-    font-size: clamp(0.8em, 2.5vw, 1.1em);
+    font-size: clamp(0.8em, 50px, 1.1em);
 }
 
 p,
@@ -107,7 +107,7 @@ nav li a:hover,
 
 .fa-magnifying-glass {
     color: var(--text-colour);
-    font-size: clamp(1.2em, 2.5vw, 1.5em);
+    font-size: clamp(1.2em, 50px, 1.5em);
     margin-right: 5%;
 }
 
@@ -136,10 +136,11 @@ footer {
 
 .logo-footer img {
     width: 40px;
+    height: 45px;
 }
 
 h2 {
-    font-size: 1rem;
+    font-size: 1em;
     margin: 5px;
 }
 
