--- a/css/styles.css
+++ b/css/styles.css
@@ -287,18 +287,19 @@ input {
     box-shadow: 5px 5px 5px var(--text-colour);
     border-radius: 2px;
     width: 100%;
-    height: 400px;
+    height: 410px;
     transition: 0.4s ease-in-out;
 }
 
 .recipePost:hover {
     box-shadow: 10px 10px 10px var(--text-colour);
     width: 101%;
+    z-index: 1;
 }
 
-.recipePost img {
+.recipe_img {
     width: 100%;
-    height: 300px;
+    min-height: 290px;
     object-fit: cover;
     margin: 0;
 }
@@ -398,16 +399,35 @@ dialog #modal_img {
     .cakes h3 {
         font-size: 1em;
     }
+
+    .recipePost {
+        height: 360px;
+    }
+
+    .recipe_img {
+        min-height: 260px;
+    }
+
+    .recipePost h3 {
+       font-size: 0.9em;
+    }
 }
 
 @media (max-width: 950px) {
     .bottom_img {
         width: 80%;
     }
+
+    .recipes_list {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .recipePost {
+        height: 330px;
+    }
 }
 
 @media (max-width: 850px) {
-
     .about {
         width: 80%;
     }
@@ -438,6 +458,23 @@ dialog #modal_img {
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 3em;
+    }
+}
+
+@media (max-width:750px) {
+    .recipes_container,
+    .recipes_list {
+        display: flex;
+        flex-direction: column;
+        gap: 2em;
+    }
+
+    .recipes_list {
+        margin: 0 0 100px 0;
+    }
+
+    .show-more {
+        margin-bottom: 100px;
     }
 }
 
@@ -512,7 +549,7 @@ dialog #modal_img {
     }
 
     .cakes h3 {
-        font-size: 0.9em;
+        font-size: 1em;
     }
 }
 
