--- a/css/styles.css
+++ b/css/styles.css
@@ -22,13 +22,15 @@ form,
 }
 
 .contact {
-    margin: 50px 0 0 0;
+    margin: 50px auto 0 auto;
+    width: 90%;
 }
 
 form {
     align-items: flex-start;
     margin: 50px auto;
     gap: 2em;
+    width: 90%;
 }
 
 .column,
@@ -239,6 +241,7 @@ input {
     gap: 2em;
     justify-content: space-evenly;
     width: min(1200px, 80%);
+    margin: 50px auto;
 }
 
 .images img {
@@ -324,7 +327,7 @@ input {
 
 .go-back {
     text-decoration: underline;
-    font-size: 1.5em;
+    font-size: clamp(1.2em, 1.5vw, 1.5em);
 }
 
 .recipe_container {
@@ -341,8 +344,21 @@ input {
     margin: 0 auto;
 }
 
+.recipe div {
+    display: flex;
+    flex-direction: column;
+    width: min(1200px, 80%);
+    justify-content: center;
+    text-align: start;
+    margin: 20px auto;
+}
+
+.recipe h3 {
+    margin: 0 10%;
+}
+
 #modal_img {
-    width: 50%;
+    width: min(1000px, 70%);
     justify-content: center;
     margin: 0 auto 30px auto;
 }
@@ -362,10 +378,10 @@ dialog {
 }
 
 dialog #modal_img {
-    width: 1100px;
+    width: min(1200px 100%);
     height: 750px;
     position: fixed;
-    top: 80px;
+    top: 0;
     left: 15%;
     object-fit: contain;
 }
@@ -425,6 +441,12 @@ dialog #modal_img {
     .recipePost {
         height: 330px;
     }
+
+    input,
+    #message {
+        width: 350px;
+    }    
+
 }
 
 @media (max-width: 850px) {
@@ -459,6 +481,11 @@ dialog #modal_img {
         grid-template-columns: 1fr 1fr;
         gap: 3em;
     }
+
+    input,
+    #message {
+        width: 300px;
+    }
 }
 
 @media (max-width:750px) {
@@ -475,6 +502,27 @@ dialog #modal_img {
 
     .show-more {
         margin-bottom: 100px;
+    }
+
+    form {
+        justify-content: center;
+        align-items: center;
+        margin: 0 auto;
+        gap: 0;
+    }
+
+    input,
+    #message {
+        width: 400px;
+    }
+
+    .column {
+        margin-top: 50px;
+        gap: 5%;
+    }
+
+    .message {
+        margin: 0;
     }
 }
 
@@ -515,7 +563,24 @@ dialog #modal_img {
     .images img {
         object-fit: cover;
     }
+    
+    #modal_img {
+        width: 90%;
+       }
 }
+
+@media (max-width: 480px) {
+    input,
+    #message {
+     width: 250px;
+     height: 30px;
+    }
+
+    #message {
+        height: 100px;
+    }
+ }
+ 
 
 @media (max-width: 420px) {
     .carousel {
