fixed the scrolling for hamburger menu
 also adjusted carousel images

--- a/css/imports/media.css
+++ b/css/imports/media.css
@@ -97,6 +97,11 @@
         width: 500px;
     }
 
+    .post img {
+        height: 350px;
+        object-fit: cover;
+    }
+
     .info {
         flex-direction: column;
         justify-content: center;
@@ -115,6 +120,10 @@
 
     .logo_img {
         width: 90px;
+    }
+
+    .post img {
+        height:300px ;
     }
 
     form {
@@ -136,7 +145,7 @@
 
    .menu ul {
         flex-direction: column;
-        position: fixed;
+        position: absolute;
         top: 50px;
         gap: 10px;
         left: 0;
@@ -146,6 +155,7 @@
         margin: 0;
         font-size: 1.2em;
         display: none;
+        z-index: 2;
     }
 
    footer nav {
