--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,11 @@
     .post {
         width: 350px;
     }  
+
+    .post img {
+        height: 250px;
+    }
+
     .cakes {
         width: 100px;
         height: 100px;
@@ -221,6 +226,10 @@
     .post {
         width: 230px;
     }  
+
+    .post img {
+        height: 190px;
+       }
 
     .recipe__options {
         width: 70%;
